--- a/app/web/templates/clicker.html
+++ b/app/web/templates/clicker.html
@@ -91,17 +91,19 @@
                 резерв 0, ожидайте новых пополнения
                 {% endif %}
             </div>
-        
-        
-        <div class="balance">(ваш баланс: 33 xcoins)</div>
+        <div class="balance">Ваш баланс:
+             <code id="balance">
+             </code>
+             xcoins
+        </div>
         <pre><code id="div-code-output"></code></pre>
         
         <div class="level-bar-container">
             <div class="level-bar"></div>
-            <div class="level-text">ВАШ УРОВЕНЬ 1{{user}}<br>84/100</div>
+            <div class="level-text">ВАШ УРОВЕНЬ 1<br>84/100</div>
         </div>
         
-        <button class="coin-button" type="button" onclick="checkMyData()    ;">МОНЕТА</button>
+        <button class="coin-button" type="button" onclick="checkMyData();">МОНЕТА</button>
         
         <button class="upgrade-button" type="button" onclick="setMyUserID();">ПРОКАЧАТЬ УРОВЕНЬ 1$<br>+200 ЭНЕРГИИ</button>
 
@@ -128,6 +130,7 @@
                 var json = JSON.parse(result.user);
                 if (result.ok) {
                     $('#div-code-output').text(json.telegram_link).removeClass('err').addClass('ok').show();
+                    $('#balance').text(json.xcoins);
                 } else {
                     $('#div-code-output').text('😥 Hash is not ok: ' + result.error).removeClass('ok').addClass('err').show();
                 }
