Pay to reserve from upgrade energy level

--- a/app/web/templates/clicker.html
+++ b/app/web/templates/clicker.html
@@ -166,7 +166,7 @@
         });
     }
 
-    function tap() {
+    function upgradeEnergyLevel() {
         $('button').prop('disabled', true);
 
         $.ajax('/api/buy', {
