--- a/app/web/templates/clicker.html
+++ b/app/web/templates/clicker.html
@@ -108,7 +108,7 @@
         
         <button class="coin-button" type="button" onclick="tap();">МОНЕТА</button>
         
-        <button class="upgrade-button" type="button" onclick="upgradeEnergyLevel();">ПРОКАЧАТЬ УРОВЕНЬ 1$<br>+200 ЭНЕРГИИ</button>
+        <button class="upgrade-button" type="button" onclick="upgradeEnergyLevel();">ПРОКАЧАТЬ УРОВЕНЬ <span id="next_level_cost"></span>$<br>+<span id="next_level_energy"></span> ЭНЕРГИИ</button>
 
         <div class="timer">Осталось до распределения бонусов: <span id="time_until_bonuses"></span></div>
     </div>
@@ -133,6 +133,7 @@
                 var json = JSON.parse(result.user);
                 if (result.ok) {
                     draw(json)
+                    console.log(result.user)
                 } else {
                 }
             },
@@ -197,7 +198,8 @@
         $('#energy_amount').text(data.energy_amount);
         $('#total_energy_amount').text(data.total_energy_amount);
         $('#reserve').text(data.reserve);
-
+        $('#next_level_cost').text(data.next_level_cost);
+        $('#next_level_energy').text(data.next_level_energy);
     }
 
     async function fetchNextRunTime() {
