--- a/app/web/templates/clicker.html
+++ b/app/web/templates/clicker.html
@@ -13,16 +13,20 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 
     <style>
         body {
             font-family: Arial, sans-serif;
-            
+            background: #2b2f38;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #fff;
             color: #000;
+            height: 100%;
         }
         .container {
             padding: 20px;
@@ -31,6 +35,7 @@
             font-size: 16px;
             margin-bottom: 10px;
             margin: 20px;
+            font-family: "Advent Pro", sans-serif;
         }
         .level-bar-container {
             position: relative;
@@ -52,23 +57,20 @@
             line-height: 30px;
         }
         .coin-button {
-            border: 2px solid #000;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            line-height: 150px;
+            background-image: url('https://grayscheme.com/uploads/tether-4.webp');
+            background-size: cover;
+            background-color: #2b2f38;
+            width: 175px;
+            height: 175px;
             margin: 20px auto;
-            font-size: 24px;
-            background-color: #fff;
-            cursor: pointer;
-            text-decoration: none;
-            color: #000;
+            border: none;
             display: flex;
+
             align-items: center;
             justify-content: center;
         }
         .coin-button:hover {
-            background-color: #f0f0f0;
+            
         }
         .upgrade-button {
             display: inline-block;
@@ -81,20 +83,32 @@
             color: #000;
             font-size: 16px;
         }
+        .timer {
+              font-family: "Advent Pro", sans-serif;
+        }
+        #energy_level {
+              font-family: "Advent Pro", sans-serif;
+        }
+        .energy_level {
+            font-family: "Advent Pro", sans-serif;
+        }
+        #balance {
+            font-family: "Advent Pro", sans-serif;
+        }
     </style>
 </head>
 <body>
     <div class="container">
             <div class="reserve">
-                РЕЗЕРВ: <span id="reserve"></span>
+                Резерв: <span id="reserve"></span>
             </div>
-        <div class="balance">Ваш баланс:
+        <div class="balance">Баланс:
              <code id="balance">
              </code>
              xcoins
         </div>
         <pre><code id="div-code-output"></code></pre>
-        <span>Ваш уровень энергии: <span id="energy_level"></span></span>
+        <span class="energy_level">Уровень энергии: <span id="energy_level"></span></span>
         <div class="level-bar-container">
             <div class="level-bar" id="level-bar"></div>
             <div class="level-text">
@@ -102,11 +116,11 @@
             </div>
         </div>
         
-        <button class="coin-button" type="button" onclick="tap();">МОНЕТА</button>
+        <button class="coin-button" type="button" onclick="tap();"></button>
         
-        <button class="upgrade-button" type="button" onclick="upgradeEnergyLevel();">ПРОКАЧАТЬ УРОВЕНЬ <span id="next_level_cost"></span>$<br>+<span id="next_level_energy"></span> ЭНЕРГИИ</button>
+        <button class="upgrade-button" type="button" onclick="upgradeEnergyLevel();">Прокачать Уровень <span id="next_level_cost"></span>$<br>+<span id="next_level_energy"></span> ЭНЕРГИИ</button>
 
-        <div class="timer">Осталось до распределения бонусов: <span id="time_until_bonuses"></span></div>
+        <div class="timer">xDrop: <span id="time_until_bonuses"></span></div>
     </div>
 </body>
 <script>
