--- a/app/web/templates/clicker.html
+++ b/app/web/templates/clicker.html
@@ -215,7 +215,7 @@ h1 {
       <table style="width: 100%; margin: 0 auto; color: white; font-family: 'Advent Pro', sans-serif;     border: 1px solid #c2c2c24d;
     box-shadow: 0px 0px 10px #ffffff0f; border-radius: 4PX; text-shadow: 0px 0px 2px white;" border="1">
         <tr>
-            <td>Резерв</td>
+            <td>Пул xCoins</td>
             <td><span id="reserve"></span></td>
         </tr>
         <tr>
